<resources>
    <string name="app_name">BookStore</string>
    <string name="action_delete_all_entries">Delete All Entries</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="category_name">Name:</string>
    <string name="hint_book_name">Name of the book</string>
    <string name="category_price">Price:</string>
    <string name="hint_book_price">15</string>
    <string name="category_quantity">Quantity:</string>
    <string name="category_supplier_name">Supplier Name:</string>
    <string name="hint_book_supplier_name">Editora Erika</string>
    <string name="category_supplier_phone">Supplier Phone:</string>
    <string name="hint_book_supplier_phone">555 5555-5555</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="empty_view_title_text">Do data to show, sorry...</string>
    <string name="empty_view_subtitle_text">Add a book clicking in the icon below</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_book_successful">Book Deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Delete this Book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="info_value_quantity">Negative values are not allowed</string>
    <string name="call_text_button">Call</string>
    <string name="book_sold">Book Sold</string>
    <string name="no_more_book">No more books</string>
    <string name="information">Please, fill out all field</string>
</resources>
