<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:textAppearanceMedium"/>

        <EditText
            android:id="@+id/edit_book_name"
            android:layout_width="match_parent"
            android:hint="@string/hint_book_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:textAppearanceMedium"/>

        <EditText
            android:id="@+id/edit_book_price"
            android:layout_width="match_parent"
            android:hint="@string/hint_book_price"
            android:inputType="numberDecimal"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:textAppearance="?android:textAppearanceMedium"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="-" />

        <TextView
            android:id="@+id/edit_book_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:hint="1000"
            android:inputType="number"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="+" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:textAppearanceMedium"/>

        <EditText
            android:id="@+id/edit_book_suppplier_name"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/hint_book_supplier_name"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_supplier_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:textAppearanceMedium"/>

        <EditText
            android:id="@+id/edit_book_supplier_phone"
            android:layout_width="match_parent"
            android:hint="@string/hint_book_supplier_phone"
            android:inputType="number"
            style="@style/EditorFieldStyle" />
    </LinearLayout>
</LinearLayout>